--- a/package.json
+++ b/package.json
@@ -17,35 +17,36 @@
   "keywords": [],
   "author": "Indra Arifin",
   "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "@babel/polyfill": "^7.4.4",
+    "common-tags": "^1.8.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.14",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.5.4",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
     "app-module-path": "^2.2.0",
-    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
-    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
-    "common-tags": "^1.8.0",
     "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
-    "isomorphic-fetch": "^2.2.1",
     "jsdom": "^15.1.1",
-    "lodash": "^4.17.14",
     "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
-    "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.2",
     "style-loader": "^0.23.1",
